[gd_scene load_steps=23 format=3 uid="uid://dfc330t8reacp"]

[ext_resource type="Script" path="res://scenes/maps/house.gd" id="1_yyrmo"]
[ext_resource type="Texture2D" uid="uid://kbvbynv44nvy" path="res://assets/places/ROOM1.png" id="3_pc4te"]
[ext_resource type="Texture2D" uid="uid://brwml07r6apn8" path="res://assets/places/camp.png" id="3_v0t8j"]
[ext_resource type="PackedScene" uid="uid://plq0xuq5ke1w" path="res://scenes/player/player.tscn" id="5_nud4r"]
[ext_resource type="Texture2D" uid="uid://coo373phjcv48" path="res://assets/ui/button.png" id="6_acdg0"]
[ext_resource type="Script" path="res://scenes/maps/life_checker.gd" id="6_gl8i1"]
[ext_resource type="PackedScene" uid="uid://1mr5j47eap7b" path="res://scenes/npc/havany_npc.tscn" id="7_kig2w"]
[ext_resource type="PackedScene" uid="uid://cbwa2yt5xe6aj" path="res://scenes/window_dialogue_final.tscn" id="8_h2dha"]
[ext_resource type="PackedScene" uid="uid://cnnyck047rtlu" path="res://text.tscn" id="9_a42h2"]
[ext_resource type="PackedScene" uid="uid://dv1vmupltohqa" path="res://scenes/npc/havany_npc_state.tscn" id="10_kxhf0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2xj3y"]
radius = 28.0
height = 68.0

[sub_resource type="Theme" id="Theme_mj0yj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_crr8s"]
texture = ExtResource("6_acdg0")
modulate_color = Color(0.601223, 0.601223, 0.601223, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_82sty"]
texture = ExtResource("6_acdg0")
modulate_color = Color(1, 0.508591, 0.0257265, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_luatp"]
texture = ExtResource("6_acdg0")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5e7uu"]
height = 70.0

[sub_resource type="Theme" id="Theme_i8evk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w0p62"]
texture = ExtResource("6_acdg0")
modulate_color = Color(0.601223, 0.601223, 0.601223, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4gs7u"]
texture = ExtResource("6_acdg0")
modulate_color = Color(1, 0.508591, 0.0257265, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ipe25"]
texture = ExtResource("6_acdg0")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pkv2m"]
size = Vector2(47, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ea7ew"]
size = Vector2(193, 45)

[node name="house" type="Node2D"]
script = ExtResource("1_yyrmo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -451.0
offset_top = -273.0
offset_right = 949.0
offset_bottom = 596.0
color = Color(0, 0, 0, 1)

[node name="Camp" type="Sprite2D" parent="."]
visible = false
position = Vector2(220, 158)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_v0t8j")

[node name="Room" type="Sprite2D" parent="."]
position = Vector2(10, 141)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_pc4te")

[node name="HavanyNPC" parent="." instance=ExtResource("7_kig2w")]
visible = false
position = Vector2(92, 188)
player = NodePath("../Player")
TextScene = ExtResource("8_h2dha")

[node name="Player" parent="." instance=ExtResource("5_nud4r")]
position = Vector2(-115, 204)

[node name="BedArea" type="Area2D" parent="."]
position = Vector2(-71, 214)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BedArea"]
shape = SubResource("CapsuleShape2D_2xj3y")

[node name="ButtonDamage" type="Button" parent="BedArea"]
visible = false
offset_left = -19.0
offset_top = -45.0
offset_right = 23.0
offset_bottom = -25.0
theme = SubResource("Theme_mj0yj")
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxTexture_crr8s")
theme_override_styles/pressed = SubResource("StyleBoxTexture_82sty")
theme_override_styles/normal = SubResource("StyleBoxTexture_luatp")
text = "btn_sleep"

[node name="ExitArea" type="Area2D" parent="."]
position = Vector2(16, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
shape = SubResource("CapsuleShape2D_5e7uu")

[node name="ButtonExit" type="Button" parent="ExitArea"]
visible = false
offset_left = -20.0
offset_top = -19.0
offset_right = 22.0
offset_bottom = 1.0
theme = SubResource("Theme_i8evk")
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxTexture_w0p62")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4gs7u")
theme_override_styles/normal = SubResource("StyleBoxTexture_ipe25")
text = "btn_exit"

[node name="LifeChecker" type="Node2D" parent="."]
script = ExtResource("6_gl8i1")
player = NodePath("../Player")

[node name="limits" type="StaticBody2D" parent="."]
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="limits"]
polygon = PackedVector2Array(-191, 134, -128, 134, -128, 51, -177, 51, -177, -40, -39, -40, -40, 51, -97, 51, -97, 127, -25, 127, -25, 37, 52, 37, 52, 62, 68, 62, 68, 53, 159, 52, 160, 63, 160, 134, 173, 134, 174, 175, 174, 191, 158, 191, 158, 270, 199, 270, 199, 332, 6, 333, 20, 353, 281, 350, 280, 116, 272, -25, 216, -74, 79, -83, -79, -77, -217, -69, -216, 10, -221, 140)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="limits"]
polygon = PackedVector2Array(6, 333, 9, 207, 1, 207, 0, 173, -26, 174, -26, 165, -97, 165, -97, 193, -95, 241, -49, 241, -40, 241, -40, 333, -177, 332, -177, 193, -128, 193, -128, 165, -190, 165, -190, 134, -234, 143, -211, 359, -99, 364, -36, 354, 3, 341)

[node name="CollisionShape2D" type="CollisionShape2D" parent="limits"]
position = Vector2(119.5, 234)
shape = SubResource("RectangleShape2D_pkv2m")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="limits"]
position = Vector2(103.5, 292.5)
shape = SubResource("RectangleShape2D_ea7ew")

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="limits"]
polygon = PackedVector2Array(-153, 291, -129, 291, -129, 281, -97, 281, -97, 293, -73, 292, -72, 311, -98, 313, -101, 320, -105, 321, -126, 320, -129, 312, -156, 309, -154, 291)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="limits"]
polygon = PackedVector2Array(57, 120, 130, 121, 132, 100, 132, 70, 117, 70, 117, 83, 73, 83, 73, 71, 57, 71, 56, 93)

[node name="TEXT" parent="." instance=ExtResource("9_a42h2")]

[node name="HavanyNpcState" parent="." instance=ExtResource("10_kxhf0")]
visible = false
position = Vector2(-253, 188)
is_scene = true

[connection signal="body_entered" from="BedArea" to="." method="_on_bed_area_body_entered"]
[connection signal="body_exited" from="BedArea" to="." method="_on_bed_area_body_exited"]
[connection signal="pressed" from="BedArea/ButtonDamage" to="." method="_on_button_damage_pressed"]
[connection signal="body_entered" from="ExitArea" to="." method="_on_exit_area_body_entered"]
[connection signal="body_exited" from="ExitArea" to="." method="_on_exit_area_body_exited"]
[connection signal="pressed" from="ExitArea/ButtonExit" to="." method="_on_button_exit_pressed"]
